apps/test-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    managment.aostrom.net/purpose: testing
    aostrom.net/team: managment
