apps/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
  namespace: test-app
  labels:
    app: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: ghcr.io/aostrom-dev/app:nightly-20240603-160226-5701fd7 # {"$imagepolicy": "test-app:test-app-nightly"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
