apps/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: test-app
