apps/test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: test-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - test.icecreamtruck.lol
      secretName: icecreamtruck-tls
  rules:
    - host: test.icecreamtruck.lol
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-app
                port:
                  name: http
